Removed require.reset - was only for testing anyways. Added require.config() w/ paths tests.

--- a/tests/index.html
+++ b/tests/index.html
@@ -33,6 +33,7 @@ mocha.setup('bdd');
 <script src="helpers.js"></script>
 <script src="specs/shallow.js"></script>
 <script src="specs/deep.js"></script>
+<script src="specs/paths.js"></script>
 
 <script>
 mocha.setup('bdd');
