Fixed relative dependency loading. Updated Dockerfile to use Node JS base image from Docker registry.

--- a/tests/index.html
+++ b/tests/index.html
@@ -34,6 +34,7 @@ mocha.setup('bdd');
 <script src="specs/shallow.js"></script>
 <script src="specs/deep.js"></script>
 <script src="specs/paths.js"></script>
+<script src="specs/relative.js"></script>
 
 <script>
 mocha.setup('bdd');
